--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="Logo">
+            <img src="picture/revou.jpg" alt="REVOU">
         </div>
         <nav>
             <ul>
@@ -23,9 +23,9 @@
     
     <main>
         <section class="welcome-section">
-            <h1>Hi Harfi, Welcome To Website</h1>
-            <p>Ini adalah website latihan pertama</p>
-            <div class="placeholder-image">1366x578</div>
+            <h1>Hi Semua, Welcome To Website</h1>
+            <p>Ini adalah websiteku</p>
+            <img src="picture/website.png" alt="websiteku">
         </section>
         
         <section class="headquarters-section">
@@ -37,11 +37,11 @@
                 </div>
                 <div class="location">
                     <div class="circle"></div>
-                    <p>Bandung</p>
+                    <p>Depok</p>
                 </div>
                 <div class="location">
                     <div class="circle"></div>
-                    <p>Surabaya</p>
+                    <p>Bogor</p>
                 </div>
             </div>
         </section>
