--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="picture/revou.jpg" alt="REVOU">
+            <img src="picture/revou.jpg" height="500">
         </div>
         <nav>
             <ul>
@@ -77,7 +77,7 @@
     </main>
     
     <footer>
-        <p>Created By RevoU</p>
+        <p>Created By Evan Widirga</p>
     </footer>
     
     <script src="script.js"></script>
